Changes since version 1.1.0
---------------------------

- Added a test to the Slice parser to complain if an operation on a local
  interface or class has an exception specification.

- Added a test to the property parsing code to print a warning on stderr
  if a property is not recognized. This prevents silly typos, such as
  "Ice.config=MyFile" (instead of "Ice.Config=MyFile") from slipping through
  undetected.

- Changed the mapping of the Slice byte type: ::Ice::Byte is now a typedef
  for unsigned char. (Previously, ::Ice::Byte was a typedef to char.) This
  change guarantees that byte values are always in the range 0..255 (instead
  of either -128..127 or 0..255, depending on the CPU architecture). This
  change also permits function overloading for ::Ice::Byte and char (which
  can be useful if you use both strings and byte sequences).

- Portability fix in src/IceSSL/OpenSSLPluginI.cpp.

- config/Make.rules now checks that mkshlib is defined.

- src/IceUtil/CtrlCHandler.cpp now handles (ignores) EINTR returned by 
  sigwait.

- added DB_PRIVATE flag to DBEnv->open() on Linux, to be able to use 
  the Berkeley DB that ships with RedHat 9.

Changes since version 1.0.1
---------------------------

- Added support for Visual Studio .NET 2003 aka VC 7.1

- In IceUtil, all "try" and "timed" functions now return false when
  the resource could not be acquired (i.e., an expected failure). The
  "Try" from "timedTry" functions was removed, and for consistency the
  functions trylock, readlock and writelock were renamed to tryLock,
  readLock and writeLock.

- Update to the library versioning scheme:

  On Windows, only the major and minor version are now used, for
  example: ice11d.dll (11d means 1.1 debug). In 1.0.x, the patch level
  was included in the version string, for example ice101d.dll.

  On Unix, the internal name (soname) is now constructed as
  lib<name>.so.<major version><minor version>, for example